--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </h2>
               <div class="article-excerpt">
                 <p>These women has been invited to a brunch by Monica to share their thoughts on the matter</p>
-                <p> Some women have been selected from the sexual assault record file or randomly from the street to meet the capacity for a luncheon room.</p>
+                <p> Some women have been selected from the sexual assault record of the Sasketchewan Police Department and randomly from the street to meet the capacity for a luncheon room.</p>
               </div>
               <div class="article-author">
                 <div class="article-author-img">
