--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 
                 <!-- <p>Yeah, it's safe to say these guys have a great sense of humor, which isn't really suprising for us considering their seemingly absurd solution to online payments. Instead of chasing 1000-hour programming contracts to build clunky payments solutions for each individual client, the Collison...</p> -->
             <p style="margin: 5rem;">Victims of sexual assault can take days to recover from their trauma, sometimes even weeks. However, they definitely carry regrets about that unfortunate day.  After a lighthearted brunch hangout, the victims finally opened up about their faults in not being able to protect themselves. Most of these women vehemently express the prevalent concern about women endangering themselves by wearing provocative clothes or looking at another male to trigger these incidents. 
-                Karen Martini, a woman who launched a fraud sexual assault feels she is vindicated to share her thoughts on the matter, 
+                </p>
+             <p> Karen Martini, a woman who launched a fraud sexual assault feels she is vindicated to share her thoughts on the matter, 
                 “I have not been sexually assaulted before, sadly” Martini expresses her disdain, “It would make a handsome sum to support the bill I paid last week to repair my car.”
                 Martini continues to share her experience on the matter, “I don’t get why the women who actually get assaulted don’t just refuse when the attacker came in the scene. They should have enough senses to not follow strangers or wear tiny spaghetti straps on a night out! Such a promiscuous act is inviting to the average male!”
                 </p>  
@@ -105,7 +106,7 @@
             </p>
             <p>Some other women decided not to speak up about this matter. However, the women who do speak up detail the faults of the women at play in these assaults. Common claims seem to be women not clothing themselves properly, placing men in their peripheral views for than the standard two seconds and not refusing with definitive hand gestures.
 
-                When these women get asked to share their stories since they were not on the police report, they show signs of discomfort and some divert their eyes from the reporter. It is clear that the women who are voicing their opinions are not totally comfortable sharing their accounts on the matter due to the trauma.
+                When these women get asked to share their stories since they were not on the police report, they show signs of discomfort and some divert their eyes from the reporter. It is clear that the women who are voicing their opinions are not totally comfortable sharing their accounts on the incident and have reasons for doing so. 
                 </p>
             <p>The refreshing talk with these women has given us informative insights into the minds of victims of sexual assaults. However, before putting the blame on someone else, it is always beneficial to assess your own fault in one situation. These women certainly have done an acute mental assessment and see the faults in themselves after encountering the traumatic event. </p>
             </div>
