--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="#" class="article-link">Sexual Assault Victim Recalled <mark class="mark mark--primary">Their Regrets</mark> of not Being Able to Protect Themselves on the Incident Day</a>
               </h2>
               <div class="article-excerpt">
-                <p>These women has been invited to a brunch by Monica to share their thoughts on the matter</p>
+                <p>These women has been invited to a brunch to share their thoughts on the matter</p>
                 <p> Some women have been selected from the sexual assault record of the Sasketchewan Police Department and randomly from the street to meet the capacity for a luncheon room.</p>
               </div>
               <div class="article-author">
@@ -63,6 +63,7 @@
                   <dl>
                     <dt style="margin-left: 10px;"> Monica Trinh </dt>
                     <dt style="margin-left: 10px;">Part-time Reporter</dt>
+                    <dt style="margin-left: 10px;">Tags: #satire, #victimblaming, #internalizedmisogyny, #itisTHATbigofadeal</dt>
                   </dl>
                 </div>
               </div>
@@ -102,7 +103,7 @@
 
                 <figure class="article-img" style="padding-bottom: 50px">
                     <img src="ii.webp">"
-            <p> Obily Yang, a biochemical student at the University of Saskatchewan who has been verbally and sexually assaulted by her professor shies away from the conversation. Her case launched against her professor has been dismissed by the court and by the fact that she decided not to pursue further legal action, she must not have time to be trivialized by this matter. It is a heartwarming sign to see how she has recovered from the trauma and her abstaining from this light conversation only proves that she cannot be bothered by it anymore. 
+            <p> Obily Yang, a biochemical student at the University of Saskatchewan who has been verbally and sexually assaulted by her professor, shies away from the conversation. Her case launched against her professor has been dismissed by the court and by the fact that she decided not to pursue further legal action, she must not have time to be trivialized by this matter. It is a heartwarming sign to see how she has recovered from the trauma and her abstaining from this light conversation only proves that she cannot be bothered by it anymore. 
 
             </p>
             <p>Some other women decided not to speak up about this matter. However, the women who do speak up detail the faults of the women at play in these assaults. Common claims seem to be women not clothing themselves properly, placing men in their peripheral views for than the standard two seconds and not refusing with definitive hand gestures.
