--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="#" class="article-link">Sexual Assault Victim Recalled <mark class="mark mark--primary">Their Regrets</mark> of not Being Able to Protect Themselves on the Incident Day</a>
               </h2>
               <div class="article-excerpt">
-                <p>12 women has been invited to a brunch to share their thoughts on the matter</p>
+                <p>12 women has been invited to a brunch to share their thoughts on the matter.</p>
                 <p> Some women have been selected from the sexual assault record of the Sasketchewan Police Department and randomly from the street to meet the capacity for a luncheon room.</p>
               </div>
               <div class="article-author">
