--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           </div>
       </header>
       <main class="responsive-wrapper">
-        <div class="page-title">
+        <!-- <div class="page-title">
           <h1>Latest Updates</h1>
-        </div>
+        </div> -->
         <div class="magazine-layout">
           <div class="magazine-column">
             <article class="article">
